fix FF run command